<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:gravity="center"
    android:padding="10dp"
    >

    <com.calibrage.a3ffarmerapp.Activities.CommonTextView
        android:text="@string/tap_text"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:id="@+id/choose_text"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.calibrage.a3ffarmerapp.Activities.CommonButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/english"
        android:text="@string/btn_en"
        android:textSize="14sp"
        android:layout_margin="3dp"
        android:textColor="@color/whitepure"
        android:background="@color/green"
        />
    <com.calibrage.a3ffarmerapp.Activities.CommonButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telugu"
        android:text="@string/btn_te"
        android:textSize="14sp"
        android:layout_margin="3dp"
        android:textColor="@color/whitepure"
        android:background="@color/green"/>


</LinearLayout>