<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palm_tree"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

   <!-- <ImageView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginBottom="100dp"/>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/farmerid"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textColorHighlight="@color/white"
        android:layout_marginTop="5dp"
        android:clipChildren="false"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            android:translationY="8dp"
            android:id="@+id/farmer_id_edittxt"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:background="@drawable/shaperoundeid"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


<!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:id="@+id/farmer_id_edittxt"
        android:background="@drawable/shaperoundeid"
        android:drawablePadding="10dp"
        android:hint="@string/farmerid"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_person_black_24dp"/>
-->


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:textStyle="bold"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/green"
        android:background="@drawable/loginbtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:id="@+id/or_txt"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"
            android:drawablePadding="6dp"
            android:padding="4dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_farmer_id"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapescanbtn"
        android:textColor="@color/white"
        android:id="@+id/buttonScan"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>




</LinearLayout>