<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GetRecommendationsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_l"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:id="@+id/back"/>

        <com.calibrage.a3ffarmerapp.Activities.CommonTextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:text="@string/recommendations"
            android:textStyle="bold"
            android:layout_marginStart="-10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />



    </LinearLayout>
    <com.calibrage.a3ffarmerapp.Activities.CommonTextView
        android:id="@+id/textView5"
        android:layout_below="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_plot_type"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginStart="@dimen/margin_10"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textView5"
        android:background="@drawable/spinner_bg"
        android:layout_marginTop="10dp"
        android:layout_margin="8dp"
        android:id="@+id/relative1"
        android:elevation="2dp">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textAlignment="center"
            android:background="@null"
            android:minHeight="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/spinner_bg"
        android:layout_marginTop="10dp"
        android:layout_margin="8dp"
        android:id="@+id/relative"
        android:layout_below="@+id/relative1"
        android:elevation="2dp">
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textAlignment="center"
            android:background="@null"
            android:minHeight="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_arrow_drop_down" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:id="@+id/relative2"
        android:visibility="gone"
        android:layout_below="@+id/relative"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            android:layout_margin="@dimen/margin_15"
            android:id="@+id/linear2"
            >


            <EditText
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:focusable="false"
                android:hint="@string/from_date"
                />
            <androidx.legacy.widget.Space
                android:layout_width="@dimen/margin_10"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:hint="@string/to_date" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@+id/linear2"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/shapescanbtn"
            android:textColor="@color/white"
            android:id="@+id/buttonSubmit"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
       android:visibility="gone"
        android:layout_below="@+id/relative2"
        android:textAlignment="center"
        android:text="No Data Found"
        android:layout_marginTop="100dp"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/colorAccent"
        android:layout_centerInParent="true"
        />
</RelativeLayout>