<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_l"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:id="@+id/back"/>

        <com.calibrage.a3ffarmerapp.Activities.CommonTextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/quickPay"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />



    </LinearLayout>
<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>-->
  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/arrow_left"
            android:layout_margin="10dp"
            android:id="@+id/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:text="Quick Pay"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>-->
    <com.calibrage.a3ffarmerapp.Activities.CommonTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textColor="@color/yellow"
        android:layout_margin="10dp"
        android:text="@string/select_collection"
        android:textSize="@dimen/text_size_20" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
         />

    <com.calibrage.a3ffarmerapp.Activities.CommonButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapescanbtn"
        android:textColor="@color/white"
        android:id="@+id/btn_submit"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>

</LinearLayout>