<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_l"
            android:layout_marginTop="18dp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:id="@+id/back"/>

        <com.calibrage.a3ffarmerapp.Activities.CommonTextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/pole"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />



    </LinearLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear1"
        tools:context=".Activities.OrderPlacedActivity">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linear1"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/arrow_left"
                android:layout_margin="10dp"
                android:id="@+id/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="10dp"

                android:textSize="@dimen/text_size_20" />
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear2"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_10">
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/goDownspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="false"
                app:ms_dropDownHintView="@layout/dropdown_hint_item"
                app:ms_hintView="@layout/hint_item"
                app:ms_hint="@string/select_godown"
                app:ms_enableFloatingLabel="true"
                app:ms_enableErrorLabel="true"
                app:ms_floatingLabelText="@string/select_godown"
                app:ms_highlightColor="@color/green"
                app:ms_errorColor="@color/blue"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_floatingLabelColor="@color/black"/>
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/paymentSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="false"
                app:ms_dropDownHintView="@layout/dropdown_hint_item"
                app:ms_hintView="@layout/hint_item"
                app:ms_hint="@string/payments"
                app:ms_enableFloatingLabel="true"
                app:ms_enableErrorLabel="true"
                app:ms_floatingLabelText="Payment"

                app:ms_highlightColor="@color/green"
                app:ms_errorColor="@color/blue"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_floatingLabelColor="@color/black"/>

            <com.calibrage.a3ffarmerapp.Activities.CommonButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shapescanbtn"
                android:textColor="@color/white"
                android:id="@+id/buttonSubmit"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_20"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>